--- a/ms-parent/nacos-config-example/rabbitmq-config.yml
+++ b/ms-parent/nacos-config-example/rabbitmq-config.yml
@@ -1,6 +1,7 @@
+# 注：在windows平台，如果nacos配置中有中文，使用cmd命令行启动时，会导致解析失败，因为编码的问题，应用启动命令需要添加参数：-Dfile.encoding=utf-8，此参数要在 -jar的前面，如：java -Dfile.encoding=utf-8 -jar xxx.jar --server.port=8311
 spring:
   rabbitmq:
-    host: 192.168.2.xx
+    host: 192.168.x.y
     port: 5672
     username: user
     password: pwd
